finished aoc 12 - day 1 and 2

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,7 +67,9 @@
         "variant": "cpp",
         "vector": "cpp",
         "algorithm": "cpp",
-        "filesystem": "cpp"
+        "filesystem": "cpp",
+        "list": "cpp",
+        "queue": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
